--- a/photo-grid.html
+++ b/photo-grid.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <meta name  ="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Photo Grid</title>
 
         <style>
             @import url('./base.css');
@@ -17,49 +17,49 @@
         <div class="photo-grid">
             <div
               class="card card-tall card-wide"
-              style="background-image:url('walking.JPG')"
+              style="background-image:url('./images/walking.JPG')"
             >
               1
             </div>
             <div
               class="card card-tall"
-              style="background-image:url('waterfall.JPG')"
+              style="background-image:url('./images/waterfall.JPG')"
             >
               2
             </div>
             <div
               class="card"
-              style="background-image:url('salamander.JPG')"
+              style="background-image:url('./images/salamander.JPG')"
             >
               3
             </div>
             <div
               class="card"
-              style="background-image:url('smallfall.JPG')"
+              style="background-image:url('./images/smallfall.JPG')"
             >
               4
             </div>
             <div
               class="card card-tall card-wide"
-              style="background-image:url('crossing.JPG')"
+              style="background-image:url('./images/crossing.JPG')"
             >
               5
             </div>
             <div
               class="card card-tall"
-              style="background-image:url('fungus.JPG')"
+              style="background-image:url('./images/fungus.JPG')"
             >
               6
             </div>
             <div
-              class="card card-wide"
-              style="background-image:url('morewaterfall.JPG')"
+              class="card card-tall card-wide"
+              style="background-image:url('./images/morewaterfall.JPG')"
             >
               7
             </div>
             <div
               class="card card-wide"
-              style="background-image:url('rushing.JPG')"
+              style="background-image:url('./images/rushing.JPG')"
             >
               8
             </div>
